[project]
name = "osintgraph"
version = "0.1.2"
description = "Osintgraph is a tool that maps Instagram targets, revealing social connections, posts, and interactions for OSINT investigations."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
    { name = "XD-MHLOO"}
]
keywords = [
    "OSINT",
    "Instagram",
    "Neo4j",
    "LangGraph",
    "LangChain",
    "Social Network Analysis"
]
dependencies = [
    "instaloader==4.14.2",
    "langchain==0.3.27",
    "langchain-core==0.3.72",
    "langchain-google-genai==2.1.8",
    "langgraph==0.6.2",
    "langmem==0.0.29",
    "neo4j==5.28.1",
    "protobuf==6.31.1",
    "pydantic==2.11.7",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.2",
    "rich==14.1.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "platformdirs>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel]
packages = ["src/osintgraph"]

[project.scripts]
osintgraph = "osintgraph.cli:main"

[project.urls]
Homepage = "https://github.com/XD-MHLOO/Osintgraph"
Repository = "https://github.com/XD-MHLOO/Osintgraph"
